# NG-PCE

./: .gitignore  Pipfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: pypi.yaml
classes/: engine.py  game.py  resources.py  ui.py
engine/: __init__.py  classes.py  resources.py  script_loader.py  script_runner.py
game/: char_config.json  chars.cfg  credits.txt  game_config.json  game_state.json  gstate.cfg  ui.cfg  ui_config.json
game/lang/: az.yaml  bh.yaml  bj.yaml  bn.yaml  bu.yaml  ca.yaml  ch.yaml  ct.yaml  de.yaml  en.yaml  ep.yaml  es.yaml  eu.yaml  fr.yaml  hi.yaml  is.yaml  ja.yaml  ka.yaml  kr.yaml  ma.yaml  mi.yaml  ni.yaml  od.yaml  pt.yaml  ta.yaml  tu.yaml  wu.yaml
game/languages/: am.yaml  as.yaml  du.yaml  eg.yaml  eo.yaml  fr.yaml  gl.yaml  gu.yaml  ha.yaml  id.yaml  ip.yaml  it.yaml  ki.yaml  kl.yaml  my.yaml  ps.yaml  ro.yaml  ru.yaml  sh.yaml  te.yaml  th.yaml  tm.yaml  ur.yaml  uz.yaml  va.yaml  vi.yaml  wp.yaml  yb.yaml  yk.yaml  zh.yaml
game/saves/: savegame_0.json
game/scripts/: dialogue.pcs  panoramic.pcs  peace_avenue.pcs  town_hall.pcs
paper/: paper.md
pcscript/: __init__.py  dataclasses.py  demo.pcs  grammar.py  parser.py
scenes/: cinematics.py  ending.py  intro.py  scenes.py  variables.py
src/ng_pce/: __init__.py  cli.py  config.py
src/ng_pce/classes/: __init__.py  commons.py  engine.py  game.py  ui.py
src/ng_pce/engine/: __init__.py  script_loader.py  script_runner.py
src/ng_pce/pcscript/: grammar.py  parser.py
src/ng_pce/scenes/: ending.py  intro.py  scenes.py  variables.py
src/ng_pce/tools/: __init__.py  bundle.py  game_init.py  (+2 more)
tools/: bundle.py
(+5 files in other folders)
