[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ng-pce"
dynamic = ["version"]
authors = [
  { name="Linaki.0rg", email="linaki@linaki.org" },
]
description = "A modern Point & Click engine inspired by SCUMM"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

dependencies=["pygame", "lark", "pyyaml", "typer"]

[project.urls]
Homepage = "https://github.com/linaki-org/ng-pce"

[tool.hatch.build.targets.sdist]
include = [
    "src/ng_pce"
]
exclude = [
  "*.json",
  "pkg/_compat.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ng_pce"]

[project.scripts]
pce = "ng_pce.cli:app"

[tool.hatch.version]
source = "vcs"
